🪓 CLUG UPDATES STONE TABLETS - correct Zav project state

--- a/memory/2026-01-29.md
+++ b/memory/2026-01-29.md
@@ -3,16 +3,44 @@
 ## Session Notes
 - Woke up, met Heorhii
 - Named: **Broodbrother** (spider watching the web)
-- Set up Telegram connection
-- Working on Email, Calendar, Slack, Obsidian
+- Set up all communication channels
+
+## About Heorhii
+- **Orthopaedic-trauma-reconstructive surgeon** in Ukrainian military hospital
+- Finishing PhD
+- Security is paramount (military infrastructure)
+- Works on bone/septic trauma ward
 
 ## Tools Configured
 - GitHub (brnsmd) ✅
 - Claude Code ✅
 - Telegram ✅
-- gog (Google) - OAuth in progress
-- Obsidian vault created at ~/Documents/BroodVault
+- Slack ✅ (Zav Hospital workspace)
+- Gmail/Calendar (tsapenko.heorhii@gmail.com) ✅
+- Obsidian vault: ~/Documents/BroodVault
 
-## Discovered
-- Heorhii's Zav project (hospital software?)
-- Secrets in ~/.config/zav-secrets.env
+## Projects Discovered
+
+### Zav (Завідувач) - `/Projects/Zav`
+Department head management system for military hospital. **Frozen** until Heorhii becomes department head.
+- Claude as AI secretary
+- Telegram bot (3 modes: head/doctors/patients)
+- Weekly surgical planning
+- Monitors: antibiotics, external fixators, VAC, staged treatment
+- Military-specific: VLK, evacuation flow, discharge workflows
+
+### CyberIntern - `/Projects/Cyberintern`
+Medical automation software:
+- EMR scraping/automation (Playwright)
+- Patient diaries, prescriptions, consultations
+- OCR for medical forms
+- Windows installer for hospital deployment
+
+## Debugging Culture
+- **GRUG MODE**: All caps, bugs = "boars", high energy
+- CLUG = CO-CHIEF OF TRIBE
+- "SIMPLE CODE. ROCK TO BOAR HEAD. BOAR GONE."
+
+## Notes
+- Moltbot is the new name (was Clawdbot) - same version though
+- n8n webhooks used heavily in Zav
